2008-03-01 Konstantin Bournayev <bkon@bkon.ru>

	* Release: html2ps-2.0.40

	* Change: unicode-aware line breaking algorithm
	
	* Fixed: image-related errors in PostScript output
	
	* Fixed: some paths to files generated using HTML2PS_DIR contained
	duplicate directory separator
	
	* Fixed:  CSS cache returns  references to CSS objects  instead of
	object values (PHP 4)
	
	* Fixed: page  breaks were  incorrectly positioned  inside tables
	with col/rowspans
	
	* Fixed:  CSS  maring   /  padding  properties  could  be  parsed
	incorrectly when values were separated with more than one space
	
	* Fixed: Capital  omega symbol  was not  displayed  in Postscript
	output
	
	* Fixed: notice  message caused  by  not-perfectly-valid external
	file URLs
	
	* Fixed: notices/errors caused by missing images
	
	* Fixed: width issue for floating / absolute positioned items
	
	* Fixed:  list number  not is formatted  using the same  styles as
	list body
	
	* Fixed: background image positioning was incorrect for non-square
	background images
	
	* Fixed: external image-related PNG output errors
	
	* Change: documentation updates
	
	* Change: minor function naming style cleanup
	
2007-11-03 Konstanin Bournayev <bkon@bkon.ru>

	* Fixed:  broken PostScript image  encoders (thanks to  snover for
	solution)

2007-10-28 Konstanin Bournayev <bkon@bkon.ru>

	* Release: html2ps-2.0.39

	* Change: minor documentation/FAQ update

	* Fixed:  page break  issue in tables  affecting tables  with very
	small amount of content in last column

	* Fixed: warning message while doing PS output with no font metric
	files available

2007-10-14 Konstanin Bournayev <bkon@bkon.ru>

	* Release: html2ps-2.0.38
	
	* Fixed: HTML files referring to the same image several times were
	causing PHP error (introduced in 2.0.37)
	
2007-10-07 Konstanin Bournayev <bkon@bkon.ru>

	* Release: html2ps-2.0.37

	* Fixed: file protocol restriction could work incorrectly under Windows
